// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown in Dark Theme renders Default 1`] = `
<div>
  <div
    className="relative"
  >
    <div
      aria-expanded={false}
      id="headlessui-popover-button-:r18:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div>
        <button
          className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Toggle Popover
          <span
            aria-hidden="true"
            className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders Position 1`] = `
<div
  className="flex align-middle justify-around items-center w-full gap-2"
>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r1s:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Top
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r21:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Right
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r26:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Left
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders TriggerElements 1`] = `
<div
  className="flex align-middle justify-around items-center w-full gap-2"
>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r1d:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Button
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r1i:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 center h-10 gap-2 p-2 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            <svg
              className="text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r1n:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <span
            className="text-moon-14 text-trunks cursor-pointer hover:text-piccolo"
          >
            Open popover
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders WithClose 1`] = `
<div>
  <div
    className="relative"
  >
    <div
      aria-expanded={false}
      id="headlessui-popover-button-:r2b:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div>
        <button
          className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Toggle Popover
          <span
            aria-hidden="true"
            className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r2g:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Toggle Popover
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders Position 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex align-middle justify-around items-center w-full gap-2"
  >
    <div>
      <div
        className="relative"
      >
        <div
          aria-expanded={false}
          id="headlessui-popover-button-:r34:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div>
            <button
              className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              Top
              <span
                aria-hidden="true"
                className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="relative"
      >
        <div
          aria-expanded={false}
          id="headlessui-popover-button-:r39:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div>
            <button
              className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              Right
              <span
                aria-hidden="true"
                className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="relative"
      >
        <div
          aria-expanded={false}
          id="headlessui-popover-button-:r3e:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div>
            <button
              className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              Left
              <span
                aria-hidden="true"
                className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders TriggerElements 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex align-middle justify-around items-center w-full gap-2"
  >
    <div>
      <div
        className="relative"
      >
        <div
          aria-expanded={false}
          id="headlessui-popover-button-:r2l:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div>
            <button
              className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              Button
              <span
                aria-hidden="true"
                className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="relative"
      >
        <div
          aria-expanded={false}
          id="headlessui-popover-button-:r2q:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div>
            <button
              className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 center h-10 gap-2 p-2 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
            >
              <svg
                className="text-moon-24"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 11.5l-9 9-9-9"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="relative"
      >
        <div
          aria-expanded={false}
          id="headlessui-popover-button-:r2v:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
        >
          <div>
            <span
              className="text-moon-14 text-trunks cursor-pointer hover:text-piccolo"
            >
              Open popover
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders WithClose 1`] = `
<div
  dir="rtl"
>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r3j:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Toggle Popover
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover in Light Theme renders Default 1`] = `
<div>
  <div
    className="relative"
  >
    <div
      aria-expanded={false}
      id="headlessui-popover-button-:r0:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div>
        <button
          className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Toggle Popover
          <span
            aria-hidden="true"
            className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover in Light Theme renders Position 1`] = `
<div
  className="flex align-middle justify-around items-center w-full gap-2"
>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:rk:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Top
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:rp:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Right
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:ru:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Left
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover in Light Theme renders TriggerElements 1`] = `
<div
  className="flex align-middle justify-around items-center w-full gap-2"
>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:r5:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Button
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:ra:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 center h-10 gap-2 p-2 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            <svg
              className="text-moon-24"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="relative"
    >
      <div
        aria-expanded={false}
        id="headlessui-popover-button-:rf:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
      >
        <div>
          <span
            className="text-moon-14 text-trunks cursor-pointer hover:text-piccolo"
          >
            Open popover
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Popover in Light Theme renders WithClose 1`] = `
<div>
  <div
    className="relative"
  >
    <div
      aria-expanded={false}
      id="headlessui-popover-button-:r13:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
    >
      <div>
        <button
          className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          Toggle Popover
          <span
            aria-hidden="true"
            className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
